esp32_build_2.log
Processing esp32-s3-devkit-1 (platform: espressif32 @ 6.6.0; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.6.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES:
 - framework-arduinoespressif32 @ 3.20014.231204 (2.0.14)
 - tool-esptoolpy @ 1.40501.0 (4.5.1)
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
[nanopb] No generation needed.
Found 41 compatible libraries
Scanning dependencies...
Dependency Graph
|-- NimBLE-Arduino @ 1.4.3
|-- Nanopb @ 0.4.91
|-- Adafruit DotStar @ 1.2.5
|-- ESPAsyncWebServer-esphome @ 3.4.0
|-- AsyncTCP-esphome @ 2.1.4
|-- ArduinoJson @ 6.21.5
|-- WiFi @ 2.0.0
|-- Update @ 2.0.0
|-- EcoFlowComm @ 1.0.0
|-- LittleFS @ 2.0.0
|-- Preferences @ 2.0.0
Building in release mode
Compiling .pio/build/esp32-s3-devkit-1/src/OtaManager.cpp.o
Compiling .pio/build/esp32-s3-devkit-1/src/Stm32Serial.cpp.o
Compiling .pio/build/esp32-s3-devkit-1/src/WebServer.cpp.o
Compiling .pio/build/esp32-s3-devkit-1/src/dc009_apl_comm.pb.c.o
Compiling .pio/build/esp32-s3-devkit-1/src/keydata.cpp.o
Compiling .pio/build/esp32-s3-devkit-1/src/main.cpp.o
src/OtaManager.cpp:162:6: error: no declaration matches 'void OtaManager::sendDataCmd(uint32_t, uint8_t*, size_t)'
 void OtaManager::sendDataCmd(uint32_t offset, uint8_t* data, size_t len) {
      ^~~~~~~~~~
src/OtaManager.cpp:162:6: note: no functions named 'void OtaManager::sendDataCmd(uint32_t, uint8_t*, size_t)'
In file included from src/OtaManager.cpp:1:
src/OtaManager.h:9:7: note: 'class OtaManager' defined here
 class OtaManager {
       ^~~~~~~~~~
*** [.pio/build/esp32-s3-devkit-1/src/OtaManager.cpp.o] Error 1
========================== [FAILED] Took 6.26 seconds ==========================
